# ChangeLog for dev-python/beautifulsoup
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/ChangeLog,v 1.23 2009/11/03 16:55:29 jer Exp $

  03 Nov 2009; Jeroen Roovers <jer@gentoo.org> beautifulsoup-3.1.0.1.ebuild:
  Marked ~HPPA (bug #291232).

  10 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  beautifulsoup-3.1.0.1.ebuild:
  Merge from Prefix

  08 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  beautifulsoup-3.1.0.1.ebuild, +files/beautifulsoup-3.1.0.1-python-3.patch:
  Add patch for compatibility with Python 3 (upstream patches don't apply
  cleanly). Set SUPPORT_PYTHON_ABIS.

*beautifulsoup-3.1.0.1 (07 Sep 2009)

  07 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  +beautifulsoup-3.1.0.1.ebuild:
  Bump

  30 Apr 2009; Patrick Lauer <patrick@gentoo.org>
  -beautifulsoup-3.0.4.ebuild:
  Remove old

  27 Apr 2009; Markus Meier <maekke@gentoo.org> beautifulsoup-3.0.7.ebuild:
  amd64/x86 stable, bug #267336

  26 Apr 2009; Brent Baude <ranger@gentoo.org> beautifulsoup-3.0.7.ebuild:
  stable ppc, bug 267336

  25 Apr 2009; Brent Baude <ranger@gentoo.org> beautifulsoup-3.0.7.ebuild:
  stable ppc64, bug 267336

  24 Apr 2009; Patrick Lauer <patrick@gentoo.org>
  -beautifulsoup-3.0.5.ebuild:
  Remove old

*beautifulsoup-3.0.7 (25 Jun 2008)

  25 Jun 2008; Ali Polatel <hawking@gentoo.org> +beautifulsoup-3.0.7.ebuild:
  Version bump.

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

*beautifulsoup-3.0.5 (23 Feb 2008)

  23 Feb 2008; Tiziano Müller <dev-zero@gentoo.org>
  +beautifulsoup-3.0.5.ebuild:
  Version bump (bug #197293).

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  beautifulsoup-3.0.4.ebuild:
  ppc stable, bug #190238

  10 Sep 2007; Markus Meier <maekke@gentoo.org> beautifulsoup-3.0.4.ebuild:
  stable on x86, wrt bug #190238
