@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/Attic/beautifulsoup-3.0.7.ebuild,v 1.4 2009/04/27 19:28:36 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/Attic/beautifulsoup-3.0.7.ebuild,v 1.5 2009/11/03 18:52:43 armin76 Exp $
 
 NEED_PYTHON="2.3"
 
@@ -14,7 +14,7 @@ HOMEPAGE="http://www.crummy.com/software/BeautifulSoup/"
 SRC_URI="http://www.crummy.com/software/${MY_PN}/download/${MY_P}.tar.gz"
 LICENSE="PSF-2.3"
 SLOT="0"
-KEYWORDS="amd64 ppc ppc64 x86 ~x86-fbsd"
+KEYWORDS="amd64 ~ia64 ppc ppc64 ~sparc x86 ~x86-fbsd"
 IUSE=""
 
 S=${WORKDIR}/${MY_P}
