@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/Attic/beautifulsoup-3.1.0.1.ebuild,v 1.4 2009/11/03 16:55:29 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/Attic/beautifulsoup-3.1.0.1.ebuild,v 1.5 2009/11/03 18:52:43 armin76 Exp $
 
 EAPI="2"
 
@@ -18,7 +18,7 @@ SRC_URI="http://www.crummy.com/software/${MY_PN}/download/${MY_P}.tar.gz"
 
 LICENSE="PSF-2.3"
 SLOT="0"
-KEYWORDS="~amd64 ~hppa ~ppc ~ppc64 ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~x86-macos"
+KEYWORDS="~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~x86-macos"
 IUSE=""
 
 DEPEND=""
